Finish assignment 1 for Week 3 of classification module

--- a/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
@@ -1319,7 +1319,7 @@
    "source": [
     "**Quiz Question:** Notice that the probability preditions are the **exact same** for the 2nd and 3rd loans. Why would this happen?\n",
     "\n",
-    "**Answer:** Because the length of the tree was limited to two levels and the grades are the same"
+    "**Answer:** The same leaf node"
    ]
   },
   {
@@ -1487,11 +1487,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.613502041694\n",
+      "0.640581345369\n"
+     ]
+    }
+   ],
    "source": [
     "print small_model.evaluate(train_data)['accuracy']\n",
     "print decision_tree_model.evaluate(train_data)['accuracy']"
@@ -1509,12 +1518,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.619345109866\n",
+      "0.636794485136\n"
+     ]
+    }
+   ],
+   "source": [
+    "print small_model.evaluate(validation_data)['accuracy']\n",
+    "print decision_tree_model.evaluate(validation_data)['accuracy']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1536,11 +1557,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>Decision tree classifier:</pre>"
+      ],
+      "text/plain": [
+       "Decision tree classifier:"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of examples          : 37224</pre>"
+      ],
+      "text/plain": [
+       "Number of examples          : 37224"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of classes           : 2</pre>"
+      ],
+      "text/plain": [
+       "Number of classes           : 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of feature columns   : 12</pre>"
+      ],
+      "text/plain": [
+       "Number of feature columns   : 12"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of unpacked features : 12</pre>"
+      ],
+      "text/plain": [
+       "Number of unpacked features : 12"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+--------------+-------------------+-------------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+--------------+-------------------+-------------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Iteration | Elapsed Time | Training-accuracy | Training-log_loss |</pre>"
+      ],
+      "text/plain": [
+       "| Iteration | Elapsed Time | Training-accuracy | Training-log_loss |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+--------------+-------------------+-------------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+--------------+-------------------+-------------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1         | 0.051382     | 0.665538          | 0.652730          |</pre>"
+      ],
+      "text/plain": [
+       "| 1         | 0.051382     | 0.665538          | 0.652730          |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+--------------+-------------------+-------------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+--------------+-------------------+-------------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "big_model = graphlab.decision_tree_classifier.create(train_data, validation_set=None,\n",
     "                   target = target, features = features, max_depth = 10)"
@@ -1555,11 +1709,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.665538362347\n",
+      "0.627423524343\n"
+     ]
+    }
+   ],
    "source": [
     "print big_model.evaluate(train_data)['accuracy']\n",
     "print big_model.evaluate(validation_data)['accuracy']"
@@ -1605,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -1623,12 +1786,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1656\n",
+      "1716\n"
+     ]
+    }
+   ],
+   "source": [
+    "false_positives = 0\n",
+    "false_negatives = 0\n",
+    "for item in xrange(len(validation_data)):\n",
+    "    if predictions[item] != validation_data['safe_loans'][item]:\n",
+    "        if predictions[item] == 1:\n",
+    "            false_positives += 1\n",
+    "        else:\n",
+    "            false_negatives += 1\n",
+    "            \n",
+    "print false_positives\n",
+    "print false_negatives"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1659,9 +1843,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17160000"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10000 * false_negatives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33120000"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20000 * false_positives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50280000"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(10000 * false_negatives) + (20000 * false_positives)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
