Add initial data for Assignment 2 of Week 5 of Classification

--- a/Specializations/Machine Learning/Classification/Week 5/Assignment 1/module-8-boosting-assignment-1-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 5/Assignment 1/module-8-boosting-assignment-1-blank.ipynb
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -1968,6 +1968,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.672770357604\n",
       "0.690758293839\n",
       "0.691727703576\n",
       "0.684510986644\n",
@@ -1976,6 +1977,7 @@
     }
    ],
    "source": [
+    "print model_10.evaluate(validation_data)['accuracy']\n",
     "print model_50.evaluate(validation_data)['accuracy']\n",
     "print model_100.evaluate(validation_data)['accuracy']\n",
     "print model_200.evaluate(validation_data)['accuracy']\n",
