Answering the 2nd question

--- a/Specializations/Machine Learning/Classification/Week 6/module-9-precision-recall-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 6/module-9-precision-recall-assignment-blank.ipynb
@@ -679,11 +679,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">target_label</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">predicted_label</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-1</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-1</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-1</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">3798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-1</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">26689</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[4 rows x 3 columns]<br/>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\ttarget_label\tint\n",
+       "\tpredicted_label\tint\n",
+       "\tcount\tint\n",
+       "\n",
+       "Rows: 4\n",
+       "\n",
+       "Data:\n",
+       "+--------------+-----------------+-------+\n",
+       "| target_label | predicted_label | count |\n",
+       "+--------------+-----------------+-------+\n",
+       "|      1       |        -1       |  1406 |\n",
+       "|      -1      |        -1       |  3798 |\n",
+       "|      -1      |        1        |  1443 |\n",
+       "|      1       |        1        | 26689 |\n",
+       "+--------------+-----------------+-------+\n",
+       "[4 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "confusion_matrix = model.evaluate(test_data, metric='confusion_matrix')['confusion_matrix']\n",
     "confusion_matrix"
@@ -697,12 +755,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": []
   },
   {
