Implementing logistic_regression_SG

--- a/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -1215,11 +1215,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient single data point: 0.0\n",
+      "           --> Should print 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "j = 1                        # Feature number\n",
     "i = 10                       # Data point number\n",
@@ -1265,11 +1274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient mini-batch data points: 1.0\n",
+      "                --> Should print 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "j = 1                        # Feature number\n",
     "i = 10                       # Data point start\n",
@@ -1321,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1346,12 +1364,12 @@
     "        # Predict P(y_i = +1|x_i,w) using your predict_probability() function\n",
     "        # Make sure to slice the i-th row of feature_matrix with [i:i+batch_size,:]\n",
     "        ### YOUR CODE HERE\n",
-    "        predictions = ...\n",
+    "        predictions = predict_probability(feature_matrix[i:i+batch_size,:], coefficients)\n",
     "        \n",
     "        # Compute indicator value for (y_i = +1)\n",
     "        # Make sure to slice the i-th entry with [i:i+batch_size]\n",
     "        ### YOUR CODE HERE\n",
-    "        indicator = ...\n",
+    "        indicator = (sentiment[i:i+batch_size]==+1)\n",
     "        \n",
     "        # Compute the errors as indicator - predictions\n",
     "        errors = indicator - predictions\n",
@@ -1360,11 +1378,11 @@
     "            # Compute the derivative for coefficients[j] and save it to derivative.\n",
     "            # Make sure to slice the i-th row of feature_matrix with [i:i+batch_size,j]\n",
     "            ### YOUR CODE HERE\n",
-    "            derivative = ...\n",
+    "            derivative = feature_derivative(errors, feature_matrix[i:i+batch_size,j])\n",
     "            \n",
     "            # compute the product of the step size, the derivative, and the **normalization constant** (1./batch_size)\n",
     "            ### YOUR CODE HERE\n",
-    "            coefficients[j] += ...\n",
+    "            coefficients[j] += (step_size * derivative * (1./batch_size))\n",
     "        \n",
     "        # Checking whether log likelihood is increasing\n",
     "        # Print the log likelihood over the *current batch*\n",
@@ -1410,12 +1428,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0: Average log likelihood (of data points in batch [0:2]) = -0.33774513\n",
+      "Iteration 1: Average log likelihood (of data points in batch [0:2]) = -0.23455309\n",
+      "-------------------------------------------------------------------------------------\n",
+      "Coefficients learned                 : [-0.09755757  0.68242552 -0.7799831 ]\n",
+      "Average log likelihood per-iteration : [-0.33774513108142956, -0.2345530939410341]\n",
+      "-------------------------------------------------------------------------------------\n",
+      "Test passed!\n"
+     ]
+    }
+   ],
    "source": [
     "sample_feature_matrix = np.array([[1.,2.,-1.], [1.,0.,1.]])\n",
     "sample_sentiment = np.array([+1, -1])\n",
