calculating nb of passes

--- a/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
@@ -1502,11 +1502,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0: Average log likelihood (of data points in batch [00000:00001]) = -0.25192908\n",
+      "Iteration 1: Average log likelihood (of data points in batch [00001:00002]) = -0.00000001\n",
+      "Iteration 2: Average log likelihood (of data points in batch [00002:00003]) = -0.12692771\n",
+      "Iteration 3: Average log likelihood (of data points in batch [00003:00004]) = -0.02969101\n",
+      "Iteration 4: Average log likelihood (of data points in batch [00004:00005]) = -0.02668819\n",
+      "Iteration 5: Average log likelihood (of data points in batch [00005:00006]) = -0.04332901\n",
+      "Iteration 6: Average log likelihood (of data points in batch [00006:00007]) = -0.02368802\n",
+      "Iteration 7: Average log likelihood (of data points in batch [00007:00008]) = -0.12686897\n",
+      "Iteration 8: Average log likelihood (of data points in batch [00008:00009]) = -0.04468879\n",
+      "Iteration 9: Average log likelihood (of data points in batch [00009:00010]) = -0.00000124\n"
+     ]
+    }
+   ],
    "source": [
     "coefficients, log_likelihood = logistic_regression_SG(feature_matrix_train, sentiment_train,\n",
     "                                        initial_coefficients=np.zeros(194),\n",
@@ -1536,14 +1553,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration   0: Average log likelihood (of data points in batch [00000:47780]) = -0.68308119\n",
+      "Iteration   1: Average log likelihood (of data points in batch [00000:47780]) = -0.67394599\n",
+      "Iteration   2: Average log likelihood (of data points in batch [00000:47780]) = -0.66555129\n",
+      "Iteration   3: Average log likelihood (of data points in batch [00000:47780]) = -0.65779626\n",
+      "Iteration   4: Average log likelihood (of data points in batch [00000:47780]) = -0.65060701\n",
+      "Iteration   5: Average log likelihood (of data points in batch [00000:47780]) = -0.64392241\n",
+      "Iteration   6: Average log likelihood (of data points in batch [00000:47780]) = -0.63769009\n",
+      "Iteration   7: Average log likelihood (of data points in batch [00000:47780]) = -0.63186462\n",
+      "Iteration   8: Average log likelihood (of data points in batch [00000:47780]) = -0.62640636\n",
+      "Iteration   9: Average log likelihood (of data points in batch [00000:47780]) = -0.62128063\n",
+      "Iteration  10: Average log likelihood (of data points in batch [00000:47780]) = -0.61645691\n",
+      "Iteration  11: Average log likelihood (of data points in batch [00000:47780]) = -0.61190832\n",
+      "Iteration  12: Average log likelihood (of data points in batch [00000:47780]) = -0.60761103\n",
+      "Iteration  13: Average log likelihood (of data points in batch [00000:47780]) = -0.60354390\n",
+      "Iteration  14: Average log likelihood (of data points in batch [00000:47780]) = -0.59968811\n",
+      "Iteration  15: Average log likelihood (of data points in batch [00000:47780]) = -0.59602682\n",
+      "Iteration 100: Average log likelihood (of data points in batch [00000:47780]) = -0.49520194\n",
+      "Iteration 199: Average log likelihood (of data points in batch [00000:47780]) = -0.47126953\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "coefficients_batch, log_likelihood_batch = ..."
+    "coefficients_batch, log_likelihood_batch = logistic_regression_SG(feature_matrix_train, sentiment_train,\n",
+    "                                           initial_coefficients=np.zeros(194),\n",
+    "                                           step_size=5e-1, batch_size=len(feature_matrix_train), max_iter=200)"
    ]
   },
   {
@@ -1582,12 +1626,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(200/50000)"
+   ]
   },
   {
    "cell_type": "markdown",
