Answering the first question

--- a/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
@@ -73,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2016-04-17 20:59:34,158 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.8.5 started. Logging: /tmp/graphlab_server_1460919566.log\n"
+      "2016-04-21 23:19:15,324 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.8.5 started. Logging: /tmp/graphlab_server_1461273552.log\n"
      ]
     }
    ],
@@ -1049,7 +1049,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Quiz question**: In Module 3 assignment, there were 194 features (an intercept + one feature for each of the 193 important words). In this assignment, we will use stochastic gradient ascent to train the classifier using logistic regression. How does the changing the solver to stochastic gradient ascent affect the number of features?"
+    "** Quiz question**: In Module 3 assignment, there were 194 features (an intercept + one feature for each of the 193 important words). In this assignment, we will use stochastic gradient ascent to train the classifier using logistic regression. How does the changing the solver to stochastic gradient ascent affect the number of features?\n",
+    "\n",
+    "Stays the same"
    ]
   },
   {
