--- a/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
@@ -1182,7 +1182,9 @@
     "\n",
     "$$\\ell\\ell(\\mathbf{w}) = \\sum_{i=1}^N \\Big( (\\mathbf{1}[y_i = +1] - 1)\\mathbf{w}^T h(\\mathbf{x}_i) - \\ln\\left(1 + \\exp(-\\mathbf{w}^T h(\\mathbf{x}_i))\\right) \\Big) $$\n",
     "\n",
-    "How are the functions $\\ell\\ell(\\mathbf{w})$ and $\\ell\\ell_A(\\mathbf{w})$ related?"
+    "How are the functions $\\ell\\ell(\\mathbf{w})$ and $\\ell\\ell_A(\\mathbf{w})$ related?\n",
+    "\n",
+    "ll_A(w) = (1/N)*ll(w)"
    ]
   },
   {
