Answering 4 and 5th question

--- a/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
@@ -1317,11 +1317,14 @@
     "$\\color{red}{\\sum_{s = i}^{i+B}}\\partial\\ell_{s}(\\mathbf{w})/{\\partial w_j}$ \n",
     "for `j = 10`, `i = 10`, and `B = 10`. Is this a scalar or a 194-dimensional vector?\n",
     "\n",
+    "A scalar\n",
     "\n",
     "** Quiz Question:** For what value of `B` is the term\n",
     "$\\color{red}{\\sum_{s = 1}^{B}}\\partial\\ell_{s}(\\mathbf{w})/\\partial w_j$\n",
     "the same as the full gradient\n",
-    "$\\partial\\ell(\\mathbf{w})/{\\partial w_j}$?\n"
+    "$\\partial\\ell(\\mathbf{w})/{\\partial w_j}$?\n",
+    "\n",
+    "47780"
    ]
   },
   {
