--- a/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
@@ -1324,7 +1324,7 @@
     "the same as the full gradient\n",
     "$\\partial\\ell(\\mathbf{w})/{\\partial w_j}$?\n",
     "\n",
-    "1"
+    "47780"
    ]
   },
   {
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1645,16 +1645,16 @@
     {
      "data": {
       "text/plain": [
-       "0.004"
+       "1000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(200/50000)"
+    "2 * int(50000/100)"
    ]
   },
   {
@@ -2296,9 +2296,9 @@
     "**Quiz Question**: Which of the following is the worst step size? Pick the step size that results in the lowest log likelihood in the end.\n",
     "1. 1e-2\n",
     "2. 1e-1\n",
-    "3. 1e0 OK\n",
+    "3. 1e0 \n",
     "4. 1e1\n",
-    "5. 1e2"
+    "5. 1e2 OK"
    ]
   },
   {
@@ -2308,7 +2308,7 @@
     "**Quiz Question**: Which of the following is the best step size? Pick the step size that results in the highest log likelihood in the end.\n",
     "1. 1e-4\n",
     "2. 1e-2\n",
-    "3. 1e0\n",
+    "3. 1e0 OK\n",
     "4. 1e1\n",
     "5. 1e2"
    ]
