Answering the question 8

--- a/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
@@ -1324,7 +1324,7 @@
     "the same as the full gradient\n",
     "$\\partial\\ell(\\mathbf{w})/{\\partial w_j}$?\n",
     "\n",
-    "47780"
+    "1"
    ]
   },
   {
@@ -1484,7 +1484,9 @@
     "\n",
     "For the remainder of the assignment, we will compare stochastic gradient ascent against batch gradient ascent. For this, we need a reference implementation of batch gradient ascent. But do we need to implement this from scratch?\n",
     "\n",
-    "**Quiz Question:** For what value of batch size `B` above is the stochastic gradient ascent function **logistic_regression_SG** act as a standard gradient ascent algorithm?"
+    "**Quiz Question:** For what value of batch size `B` above is the stochastic gradient ascent function **logistic_regression_SG** act as a standard gradient ascent algorithm?\n",
+    "\n",
+    "47780"
    ]
   },
   {
@@ -1562,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
