Answering the question 9

--- a/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 7/module-10-online-learning-assignment-blank.ipynb
@@ -1548,7 +1548,7 @@
     "**Quiz Question**. When you set `batch_size = 1`, as each iteration passes, how does the average log likelihood in the batch change?\n",
     "* Increases\n",
     "* Decreases\n",
-    "* Fluctuates "
+    "* Fluctuates OK "
    ]
   },
   {
@@ -1606,7 +1606,7 @@
    "metadata": {},
    "source": [
     "**Quiz Question**. When you set `batch_size = len(train_data)`, as each iteration passes, how does the average log likelihood in the batch change?\n",
-    "* Increases \n",
+    "* Increases OK\n",
     "* Decreases\n",
     "* Fluctuates "
    ]
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1648,7 +1648,7 @@
        "0.004"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
